# edge-agent

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  demo_simple.py  main.py  pyproject.toml  requirements.txt  setup.py
agents/: building_env_agent.py
api/: main.py  models.py  server.py
config/: sample_devices.yaml  settings.py
core/: base_agent.py  llm_factory.py  log_config.py  reliability.py
edge_agent/: __init__.py  main.py
edge_agent/agents/: __init__.py  base.py  edge_agent.py  tools.py
edge_agent/api/: __init__.py  main.py
edge_agent/core/: __init__.py  config.py  logger.py
edge_agent/devices/: __init__.py  air_conditioner.py  base.py  models.py
edge_agent/utils/: policy_engine.py
examples/: basic_usage.py  policy_example.py
scripts/: update_openapi.sh
specs/: designs.md  openapi.json  requirements.md  tasks.md
specs/requirements/: spec_ac_control_strategy.md  spec_device_management.md
tests/: __init__.py  conftest.py  test_api.py  test_llm_factory.py  test_tools.py
tests/unit/: test_devices.py
tools/: ac_control.py  light_control.py  sensor_reader.py
